Fixed the sidebar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <div class="sidebar-heading">
       <img src="download.png">
+      <button id="close-btn">✖</button>
+      
       <h4>Sumit Resturant</h4>
       <h6>Where every flavor tells a story.</h6>
     </div>
